<resources>
    <string name="app_name">GererSonCompte</string>
    <string name="bouton_ajout">Créer un compte</string>
    <string name="bouton_ajout_operation">Créer une opération</string>
    <string name="bouton_gerer_operations">Gérer mes opérations</string>
    <string name="bouton_details_compte">Détails du compte</string>
    <string name="fichier_donnees_generales">general_datas.s</string>
    <string name="label_a_venir">A venir:</string>
    <string name="label_categorie">Catégorie:</string>
    <string name="label_compte_courant">Définir comme compte courant</string>
    <string name="label_comptes">Mes comptes</string>
    <string name="label_devise">Devise:</string>
    <string name="label_echeance">Prochaine échéance:</string>
    <string name="label_modifier">Modifier</string>
    <string name="label_montant">Montant:</string>
    <string name="label_nom">Nom:</string>
    <string name="label_operations">Mes opérations</string>
    <string name="label_prochain_solde">Prochain solde:</string>
    <string name="label_solde">Solde actuel:</string>
    <string name="label_supprimer">Supprimer</string>
    <string name="titre_activity_accounts_manager">AccountsManagerActivity</string>
    <string name="value_compte_defaut">"???"</string>
    <string name="value_solde_defaut">0,00 EUR</string>
    <string name="value_categorie_default">Aucune</string>
    <string name="value_date_default">01/01/2018</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="croissant">Croissant</string>
    <string name="decroissant">Décroissant</string>
    <string name="noms">Noms</string>
    <string name="categories">Catégories</string>
    <string name="montants">Montants</string>
    <string name="dates_d_execution">Dates d\'exécution</string>
    <string name="appliquer">Appliquer</string>
    <string name="tout_selectionner">Tout sélectionner</string>
    <string name="bouton_gerer_echeanciers">Gérer mes échéanciers</string>

</resources>
